examples/test/testpolicy16329.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16329
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key13: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value49
          key32: value35
          key47: value9
      podSelector:
        matchLabels:
          key15: value8
          key36: value26
          key23: value24
